--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis Laboratorios</title>
+    <title>assasas</title>
     <!-- Enlace a Tailwind CSS desde el CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
