--- a/index.html
+++ b/index.html
@@ -13,14 +13,24 @@
     <div class="container mx-auto p-6">
         <h1 class="text-4xl font-bold text-center mb-6">Bienvenido a Mis Laboratorios</h1>
         <div class="bg-white p-6 rounded-lg shadow-md">
-            <ul class="list-disc list-inside space-y-4">
-                <li><a href="/AguaDeMayo/Maquina_agua_de_mayo.md" class="text-blue-600 hover:text-blue-800">Laboratorio
-                        1</a></li>
-                <li><a href="/ing_social/ejericio2.md" class="text-blue-600 hover:text-blue-800">Laboratorio 2</a></li>
-                <li><a href="laboratorio3.md" class="text-blue-600 hover:text-blue-800">Laboratorio 3</a></li>
+            <ul class="flex flex-row gap-2">
+                <li>
+
+                    <a href="/AguaDeMayo/Maquina_agua_de_mayo.md" class="">
+                        <img src="/img/aguademayo.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="/ing_social/ejericio2.md" class=""><img src="/img/aguademayo.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="laboratorio3.md" class=""><img src="/img/aguademayo.png" alt=""></a>
+                </li>
             </ul>
         </div>
     </div>
+
+
 </body>
 
 </html>
