--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span class="block text-black hover:text-blue-600">DockerLabs: AguaDeMayo</span>
                 </a>
             </div>
-            <div class="flex-1 text-center">
+            <!-- <div class="flex-1 text-center">
                 <a href="ejercicio4/ejercicio4.html" class="inline-block text-white no-underline">
                     <img src='img/aguademayo.png' alt="DockerLabs" class="mx-auto mb-2">
                     <span class="block text-black hover:text-blue-600">DockerLabs</span>
@@ -40,7 +40,7 @@
                     <img src='img/aguademayo.png' alt="AguaDeMayo" class="mx-auto mb-2">
                     <span class="block text-black hover:text-blue-600">DockerLabs: AguaDeMayo</span>
                 </a>
-            </div>
+            </div> -->
         </div>
     </main>
 </body>
