--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body class="bg-gray-100">
     <header class="bg-white shadow-md py-4">
         <div class="container mx-auto flex items-center justify-between px-6">
-            <img src="img/logo2.png" alt="Logo" class="h-10">
-            <nav>
+            <img src="img/logo2.png" alt="Logo" class="w-[300px] h-[200px]">
+            <!-- <nav>
                 <ul class="flex space-x-6">
                     <li><a href="#" class="text-gray-700 hover:text-blue-600">Home</a></li>
                     <li><a href="#" class="text-gray-700 hover:text-blue-600">About</a></li>
                     <li><a href="#" class="text-gray-700 hover:text-blue-600">Contact</a></li>
                 </ul>
-            </nav>
+            </nav> -->
         </div>
     </header>
     <main class="container mx-auto mt-10 px-6">
