--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="bg-gray-100">
-    <header class="bg-white shadow-md py-4">
-        <div class="container mx-auto flex items-center justify-between px-6">
+    <header class="bg-white shadow-md py-4 flex">
+        <div class="m-auto">
             <img src="img/logo2.png" alt="Logo" class="w-[300px] h-[200px]">
             <!-- <nav>
                 <ul class="flex space-x-6">
