--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Document</title>
 </head>
 
 <body class="bg-gray-100">
     <header class="bg-black shadow-md py-4 flex">
         <div class="m-auto">
-            <img src="img/logo2.png" alt="Logo" class="w-[500px] h-[200px]">
+            <img src="img/logo2.png" alt="Logo" class="w-[550px] h-[200px]">
             <!-- <nav>
                 <ul class="flex space-x-6">
                     <li><a href="#" class="text-gray-700 hover:text-blue-600">Home</a></li>
@@ -19,6 +20,56 @@
                     <li><a href="#" class="text-gray-700 hover:text-blue-600">Contact</a></li>
                 </ul>
             </nav> -->
+            <footer class="w-full bg-black grid place-items-center gap-2 text-white py-5 relative z-10">
+                <figure class="w-36 relative">
+                    <a href="#header" class="text-white text-6xl absolute top-20 left-11 animate-bounce">
+                        <i class="fas fa-arrow-up"></i>
+                    </a>
+                    <img src="ruta/de/tu/logoWhite" alt="Logo">
+                </figure>
+                <img class="w-72" src="ruta/de/tu/info" alt="Info">
+                <ul class="flex justify-between items-center gap-5">
+                    <li
+                        class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                        <a href="https://www.linkedin.com/in/david-marca/" target="_blank"
+                            class="absolute inset-0 flex items-center justify-center">
+                            <i class="fab fa-linkedin-in text-white text-xl"></i>
+                        </a>
+                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                    </li>
+
+                    <li
+                        class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                        <a href="https://github.com/MarckWeb" target="_blank"
+                            class="absolute inset-0 flex items-center justify-center">
+                            <i class="fab fa-github text-white text-xl"></i>
+                        </a>
+                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                    </li>
+
+                    <li
+                        class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                        <a href="#" class="absolute inset-0 flex items-center justify-center">
+                            <i class="fab fa-whatsapp text-white text-xl"></i>
+                        </a>
+                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                    </li>
+
+                    <li
+                        class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                        <a href="https://legacy.devchallenges.io/portfolio/MarckWeb" target="_blank"
+                            class="absolute inset-0 flex items-center justify-center">
+                            <i class="fas fa-code text-white text-xl"></i>
+                        </a>
+                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                    </li>
+                </ul>
+            </footer>
+
         </div>
     </header>
     <main class="container mx-auto mt-10 px-6">
