--- a/index.html
+++ b/index.html
@@ -20,55 +20,47 @@
                     <li><a href="#" class="text-gray-700 hover:text-blue-600">Contact</a></li>
                 </ul>
             </nav> -->
-            <footer class="w-full bg-black grid place-items-center gap-2 text-white py-5 relative z-10">
-                <figure class="w-36 relative">
-                    <a href="#header" class="text-white text-6xl absolute top-20 left-11 animate-bounce">
-                        <i class="fas fa-arrow-up"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <ul class="flex justify-between items-center gap-5 mt-4">
+                <li
+                    class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                    <a href="https://www.linkedin.com/in/david-marca/" target="_blank"
+                        class="absolute inset-0 flex items-center justify-center">
+                        <i class="fab fa-linkedin-in text-white text-xl"></i>
                     </a>
-                    <img src="ruta/de/tu/logoWhite" alt="Logo">
-                </figure>
-                <img class="w-72" src="ruta/de/tu/info" alt="Info">
-                <ul class="flex justify-between items-center gap-5">
-                    <li
-                        class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                        <a href="https://www.linkedin.com/in/david-marca/" target="_blank"
-                            class="absolute inset-0 flex items-center justify-center">
-                            <i class="fab fa-linkedin-in text-white text-xl"></i>
-                        </a>
-                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-                    </li>
+                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                </li>
 
-                    <li
-                        class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                        <a href="https://github.com/MarckWeb" target="_blank"
-                            class="absolute inset-0 flex items-center justify-center">
-                            <i class="fab fa-github text-white text-xl"></i>
-                        </a>
-                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-                    </li>
+                <li
+                    class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                    <a href="https://github.com/MarckWeb" target="_blank"
+                        class="absolute inset-0 flex items-center justify-center">
+                        <i class="fab fa-github text-white text-xl"></i>
+                    </a>
+                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                </li>
 
-                    <li
-                        class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                        <a href="#" class="absolute inset-0 flex items-center justify-center">
-                            <i class="fab fa-whatsapp text-white text-xl"></i>
-                        </a>
-                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-                    </li>
+                <li
+                    class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                    <a href="#" class="absolute inset-0 flex items-center justify-center">
+                        <i class="fab fa-whatsapp text-white text-xl"></i>
+                    </a>
+                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                </li>
 
-                    <li
-                        class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                        <a href="https://legacy.devchallenges.io/portfolio/MarckWeb" target="_blank"
-                            class="absolute inset-0 flex items-center justify-center">
-                            <i class="fas fa-code text-white text-xl"></i>
-                        </a>
-                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                        <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-                    </li>
-                </ul>
-            </footer>
+                <li
+                    class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                    <a href="https://legacy.devchallenges.io/portfolio/MarckWeb" target="_blank"
+                        class="absolute inset-0 flex items-center justify-center">
+                        <i class="fas fa-code text-white text-xl"></i>
+                    </a>
+                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                </li>
+            </ul>
 
         </div>
     </header>
