--- a/index.html
+++ b/index.html
@@ -5,65 +5,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Document</title>
+    <title>MarckWeb-Labs</title>
 </head>
 
 <body class="bg-gray-100">
     <header class="bg-black shadow-md py-4 flex">
         <div class="m-auto">
             <img src="img/logo2.png" alt="Logo" class="w-[550px] h-[200px]">
-            <!-- <nav>
-                <ul class="flex space-x-6">
-                    <li><a href="#" class="text-gray-700 hover:text-blue-600">Home</a></li>
-                    <li><a href="#" class="text-gray-700 hover:text-blue-600">About</a></li>
-                    <li><a href="#" class="text-gray-700 hover:text-blue-600">Contact</a></li>
-                </ul>
-            </nav> -->
-            <i class="fab fa-linkedin-in"></i>
-            <ul class="flex justify-between items-center gap-5 mt-4">
-                <li
-                    class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                    <a href="https://www.linkedin.com/in/david-marca/" target="_blank"
-                        class="absolute inset-0 flex items-center justify-center">
-                        <i class="fab fa-linkedin-in text-white text-xl"></i>
-                    </a>
-                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-                </li>
-
-                <li
-                    class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                    <a href="https://github.com/MarckWeb" target="_blank"
-                        class="absolute inset-0 flex items-center justify-center">
-                        <i class="fab fa-github text-white text-xl"></i>
-                    </a>
-                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-                </li>
-
-                <li
-                    class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                    <a href="#" class="absolute inset-0 flex items-center justify-center">
-                        <i class="fab fa-whatsapp text-white text-xl"></i>
-                    </a>
-                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-                </li>
-
-                <li
-                    class="list-none w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                    <a href="https://legacy.devchallenges.io/portfolio/MarckWeb" target="_blank"
-                        class="absolute inset-0 flex items-center justify-center">
-                        <i class="fas fa-code text-white text-xl"></i>
-                    </a>
-                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                    <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-                </li>
-            </ul>
-
         </div>
     </header>
+
+    <footer class="w-full bg-black grid place-items-center gap-6 text-white py-5 relative z-10">
+        <figure class="w-36 relative">
+            <a href="#header"
+                class="text-white text-4xl absolute top-0 left-1/2 transform -translate-x-1/2 animate-bounce">
+                <i class="fas fa-arrow-up"></i>
+            </a>
+            <img src="img/logoWhite.png" alt="Logo" class="w-full">
+        </figure>
+
+        <ul class="flex justify-between items-center gap-5 mt-4">
+            <li
+                class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                <a href="https://www.linkedin.com/in/david-marca/" target="_blank"
+                    class="absolute inset-0 flex items-center justify-center text-white text-xl">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+            </li>
+
+            <li
+                class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                <a href="https://github.com/MarckWeb" target="_blank"
+                    class="absolute inset-0 flex items-center justify-center text-white text-xl">
+                    <i class="fab fa-github"></i>
+                </a>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+            </li>
+
+            <li
+                class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                <a href="https://wa.me/1234567890" target="_blank"
+                    class="absolute inset-0 flex items-center justify-center text-white text-xl">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+            </li>
+
+            <li
+                class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
+                <a href="https://legacy.devchallenges.io/portfolio/MarckWeb" target="_blank"
+                    class="absolute inset-0 flex items-center justify-center text-white text-xl">
+                    <i class="fas fa-code"></i>
+                </a>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+            </li>
+        </ul>
+    </footer>
+
     <main class="container mx-auto mt-10 px-6">
         <div class="flex gap-5 justify-center">
             <div class="flex-1 text-center">
@@ -72,18 +75,6 @@
                     <span class="block text-black hover:text-blue-600">DockerLabs: AguaDeMayo</span>
                 </a>
             </div>
-            <!-- <div class="flex-1 text-center">
-                <a href="ejercicio4/ejercicio4.html" class="inline-block text-white no-underline">
-                    <img src='img/aguademayo.png' alt="DockerLabs" class="mx-auto mb-2">
-                    <span class="block text-black hover:text-blue-600">DockerLabs</span>
-                </a>
-            </div>
-            <div class="flex-1 text-center">
-                <a href="ing_social/ejericio2.html" class="inline-block text-white no-underline">
-                    <img src='img/aguademayo.png' alt="AguaDeMayo" class="mx-auto mb-2">
-                    <span class="block text-black hover:text-blue-600">DockerLabs: AguaDeMayo</span>
-                </a>
-            </div> -->
         </div>
     </main>
 </body>
