--- a/index.html
+++ b/index.html
@@ -9,74 +9,57 @@
 </head>
 
 <body class="bg-gray-100">
-    <header class="bg-black shadow-md py-4 flex">
-        <div class="m-auto">
-            <img src="img/logo2.png" alt="Logo" class="w-[550px] h-[200px]">
-        </div>
-    </header>
 
-    <footer class="w-full bg-black grid place-items-center gap-6 text-white py-5 relative z-10">
-        <figure class="w-36 relative">
-            <a href="#header"
-                class="text-white text-4xl absolute top-0 left-1/2 transform -translate-x-1/2 animate-bounce">
-                <i class="fas fa-arrow-up"></i>
-            </a>
-            <img src="img/logoWhite.png" alt="Logo" class="w-full">
-        </figure>
-
-        <ul class="flex justify-between items-center gap-5 mt-4">
+    <!-- Header with logo -->
+    <header class="bg-black shadow-md py-4 flex flex-col items-center">
+        <img src="img/logo2.png" alt="Logo" class="w-[550px] h-[200px]">
+        <ul class="flex justify-center gap-5 mt-4">
             <li
                 class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
                 <a href="https://www.linkedin.com/in/david-marca/" target="_blank"
                     class="absolute inset-0 flex items-center justify-center text-white text-xl">
-                    <i class="fab fa-linkedin-in"></i>
+                    <img class="" src="img/icons8-linkedin-rodeado-de-círculo.svg" alt="LinkedIn Icon">
                 </a>
-                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                <!-- <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span> -->
             </li>
-
             <li
                 class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
                 <a href="https://github.com/MarckWeb" target="_blank"
                     class="absolute inset-0 flex items-center justify-center text-white text-xl">
-                    <i class="fab fa-github"></i>
+                    <img src="img/icons8-github.svg" alt="GitHub Icon">
                 </a>
-                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                <!-- <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span> -->
             </li>
 
             <li
                 class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                <a href="https://wa.me/1234567890" target="_blank"
+                <a href="https://david-cics.onrender.com/" target="_blank"
                     class="absolute inset-0 flex items-center justify-center text-white text-xl">
-                    <i class="fab fa-whatsapp"></i>
+                    <img src="img/icons8-dribbble-circled.svg" alt="GitHub Icon">
                 </a>
-                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
-            </li>
-
-            <li
-                class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
-                <a href="https://legacy.devchallenges.io/portfolio/MarckWeb" target="_blank"
-                    class="absolute inset-0 flex items-center justify-center text-white text-xl">
-                    <i class="fas fa-code"></i>
-                </a>
-                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
-                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span>
+                <!-- <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
+                <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span> -->
             </li>
         </ul>
-    </footer>
+    </header>
 
+    <!-- Social Media Icons -->
+
+
+    <!-- Main Content -->
     <main class="container mx-auto mt-10 px-6">
         <div class="flex gap-5 justify-center">
             <div class="flex-1 text-center">
                 <a href="AguaDeMayo/Maquina_agua_de_mayo.html" class="inline-block text-white no-underline">
-                    <img src='img/aguademayo.png' alt="AguaDeMayo" class="mx-auto mb-2">
+                    <img src="img/aguademayo.png" alt="AguaDeMayo" class="mx-auto mb-2">
                     <span class="block text-black hover:text-blue-600">DockerLabs: AguaDeMayo</span>
                 </a>
             </div>
         </div>
     </main>
+
 </body>
 
 </html>
