--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 class="w-12 h-12 bg-gray-700 rounded-full relative group hover:bg-gradient-to-r from-cyan-400 via-yellow-300 to-pink-500">
                 <a href="https://david-cics.onrender.com/" target="_blank"
                     class="absolute inset-0 flex items-center justify-center text-white text-xl">
-                    <img src="img/icons8-dribbble-circled.svg" alt="GitHub Icon">
+                    <img src="img/enlace.png" alt="GitHub Icon">
                 </a>
                 <!-- <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-sm"></span>
                 <span class="absolute inset-0 rounded-full bg-inherit group-hover:blur-md"></span> -->
@@ -49,16 +49,25 @@
 
 
     <!-- Main Content -->
-    <main class="container mx-auto mt-10 px-6">
-        <div class="flex gap-5 justify-center">
-            <div class="flex-1 text-center">
+
+    <main>
+
+        <h1 class="text-[50px] font-bold text-center m-5">Laboratorios</h1>
+        <div class="">
+            <div class="text-center">
                 <a href="AguaDeMayo/Maquina_agua_de_mayo.html" class="inline-block text-white no-underline">
-                    <img src="img/aguademayo.png" alt="AguaDeMayo" class="mx-auto mb-2">
-                    <span class="block text-black hover:text-blue-600">DockerLabs: AguaDeMayo</span>
+                    <img class="rounded-xl" src="img/aguademayo.png" alt="AguaDeMayo" class="mx-auto mb-2">
+                    <h3 class="text-black bold hover:text-gray text-xl font-bold">DockerLabs: AguaDeMayo</h3>
                 </a>
             </div>
+
+
         </div>
+
     </main>
+
+
+
 
 </body>
 
