--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                 </a>
             </div>
 
+            <div class="text-center">
+                <a href="Amor/Maquina_amor.html" class="inline-block text-white no-underline">
+                    <img class="rounded-xl" src="img/aguademayo.png" alt="AguaDeMayo" class="mx-auto mb-2">
+                    <h3 class="text-black bold hover:text-gray text-xl font-bold">DockerLabs: Amor</h3>
+                </a>
+            </div>
+
 
         </div>
 
