--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
     <main>
 
         <h1 class="text-[50px] font-bold text-center m-5">Laboratorios</h1>
-        <div class="">
-            <div class="text-center">
+        <div class="flex gap-5 ml-20">
+            <div class="text-center w-[500px] hover:bg-gray-400 p-4 rounded-xl">
                 <a href="AguaDeMayo/Maquina_agua_de_mayo.html" class="inline-block text-white no-underline">
                     <img class="rounded-xl" src="img/aguademayo.png" alt="AguaDeMayo" class="mx-auto mb-2">
                     <h3 class="text-black bold hover:text-gray text-xl font-bold">DockerLabs: AguaDeMayo</h3>
                 </a>
             </div>
 
-            <div class="text-center">
+            <div class="text-center w-[500px] hover:bg-gray-400 p-4 rounded-xl">
                 <a href="Amor/Maquina_amor.html" class="inline-block text-white no-underline">
                     <img class="rounded-xl" src="img/aguademayo.png" alt="AguaDeMayo" class="mx-auto mb-2">
                     <h3 class="text-black bold hover:text-gray text-xl font-bold">DockerLabs: Amor</h3>
